@@ -3,6 +3,7 @@
 * New features
 
   * Nokogiri may be used with soap4r. See XSD::XMLParser::Nokogiri
+  * Nokogiri::XML::Node#inner_html= to set the inner html for a node
 
 * Bugfixes
 
